# satellite-field-segmentation

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  predict.py  pyproject.toml
assets/: .gitkeep
configs/: train.yaml
data/: .gitkeep  README.md  download.sh
notebooks/: demo.ipynb
src/: __init__.py  dataset.py  evaluate.py  model.py  postprocess.py  train.py
